Update position to avoid items behind pawprints

--- a/components/content/FacebookFeed.module.scss
+++ b/components/content/FacebookFeed.module.scss
@@ -2,6 +2,7 @@
 
 .container {
 	padding: $padding-section;
+	position: relative;
 
 	height: 100%;
 
